DONE. And I'm quite happy with it (for now).

--- a/index.html
+++ b/index.html
@@ -8,9 +8,200 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">the sidebar section</div>
-        <header>the header section</header>
-        <main>the main section</main>
+        <div class="sidebar">
+            <div class="dashboard-item">
+                <img src="./assets/dashboard.svg" alt="dashboard icon" style="width: 64px; height: 64px;">
+                <p class="big-big dashboard-logo">Dashboard</p>
+            </div>
+            <ul class="dashboard-buttons">
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/home.svg" alt="home icon">
+                    <p>Home</p>
+                </li>
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/profile.svg" alt="profile icon">
+                    <p>Profile</p>
+                </li>
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/messages.svg" alt="messsages icon">
+                    <p>Messages</p>
+                </li>
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/history.svg" alt="history icon">
+                    <p>History</p>
+                </li>
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/tasks.svg" alt="tasks icon">
+                    <p>Tasks</p>
+                </li>
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/communities.svg" alt="communities icon">
+                    <p>Communities</p>
+                </li>
+            </ul>
+            <ul class="dashboard-buttons">
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/settings.svg" alt="settings icon">
+                    <p>Settings</p>
+                </li>
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/support.svg" alt="support icon">
+                    <p>Support</p>
+                </li>
+                <li class="dashboard-item pretty-big">
+                    <img src="./assets/privacy.svg" alt="privacy icon">
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        </div>
+
+        <header>
+            <form class="searchbar" action="#">
+                <img src="./assets/search-icon.svg" alt="magnifying glass">
+                <input type="text" name="search" id="search">
+            </form>
+            <div class="utility">
+                <img src="./assets/bell-icon.svg" alt="notification icon">
+                <img src="./assets/profile-pic.svg" alt="profile picture" style="width: 48px; height: 48px;">
+                <p class="kinda-big">'Arry Pottah</p>
+            </div>
+            <div class="user-info">
+                <img src="./assets/profile-pic.svg" alt="profile picture" style="width: 72px; height: 72px;">
+                <div>
+                    <p class="just-bold">Hi there,</p>
+                    <p class="pretty-big">'Arry Pottah (@theboywholived)</p>
+                </div>
+            </div>
+            <div class="actions">
+                <button class="kinda-big rounded-border">new</button>
+                <button class="kinda-big rounded-border">upload</button>
+                <button class="kinda-big rounded-border">share</button>
+            </div>
+        </header>
+
+        <main>
+            <div class="projects">
+                <p class="kinda-big">Your Projects</p>
+                <div class="all-projects">
+                    <div class="project-card rounded-border">
+                        <div class="content">
+                            <p class="kinda-big">Project Title</p>
+                            <p class="faded">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, eaque? Excepturi laborum. Quaerat nihil blanditiis quod, repudiandae illo quae iusto sint!</p>
+                        </div>
+                        <div class="project-actions">
+                            <img src="assets/like-icon.svg" alt="like icon">
+                            <img src="assets/chat-icon.svg" alt="chat icon">
+                            <img src="assets/share-icon.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card rounded-border">
+                        <div class="content">
+                            <p class="kinda-big">Project Title</p>
+                            <p class="faded">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit minus sunt soluta natus delectus eligendi, ad maiores accusantium cumque rerum maxime blanditiis saepe.</p>
+                        </div>
+                        <div class="project-actions">
+                            <img src="assets/like-icon.svg" alt="like icon">
+                            <img src="assets/chat-icon.svg" alt="chat icon">
+                            <img src="assets/share-icon.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card rounded-border">
+                        <div class="content">
+                            <p class="kinda-big">Project Title</p>
+                            <p class="faded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum magnam saepe officia in maxime minima dolorem illo ullam sapiente voluptas dignissimos quibusdam?</p>
+                        </div>
+                        <div class="project-actions">
+                            <img src="assets/like-icon.svg" alt="like icon">
+                            <img src="assets/chat-icon.svg" alt="chat icon">
+                            <img src="assets/share-icon.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card rounded-border">
+                        <div class="content">
+                            <p class="kinda-big">Project Title</p>
+                            <p class="faded">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia quaerat expedita vitae iusto velit quas hic ad similique aliquid beatae doloribus voluptatum unde tenetur, eveniet pariatur repellendus? Excepturi, velit incidunt?</p>
+                        </div>
+                        <div class="project-actions">
+                            <img src="assets/like-icon.svg" alt="like icon">
+                            <img src="assets/chat-icon.svg" alt="chat icon">
+                            <img src="assets/share-icon.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card rounded-border">
+                        <div class="content">
+                            <p class="kinda-big">Project Title</p>
+                            <p class="faded">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus corporis laborum quo id labore.</p>
+                        </div>
+                        <div class="project-actions">
+                            <img src="assets/like-icon.svg" alt="like icon">
+                            <img src="assets/chat-icon.svg" alt="chat icon">
+                            <img src="assets/share-icon.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card rounded-border">
+                        <div class="content">
+                            <p class="kinda-big">Project Title</p>
+                            <p class="faded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rerum, totam, quis asperiores eaque doloremque, beatae quasi iste explicabo repudiandae voluptatem?</p>
+                        </div>
+                        <div class="project-actions">
+                            <img src="assets/like-icon.svg" alt="like icon">
+                            <img src="assets/chat-icon.svg" alt="chat icon">
+                            <img src="assets/share-icon.svg" alt="share icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <p class="kinda-big">Announcements</p>
+                <div class="announcements-card rounded-border">
+                    <div class="announcement-content border-bottom">
+                        <p class="just-bold">Title</p>
+                        <p class="faded kinda-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit ww werf wcw.</p>
+                    </div>
+                    <div class="announcement-content border-bottom">
+                        <p class="just-bold">Title</p>
+                        <p class="faded kinda-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="announcement-content">
+                        <p class="just-bold">Title</p>
+                        <p class="faded kinda-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending">
+                <p class="kinda-big">Trending</p>
+                <div class="trending-card rounded-border">
+                    <div class="trending-content">
+                        <img src="./assets/trending-icon-1.svg" alt="profile picture" style="width: 48px; height: 48px;">
+                        <div>
+                            <p>@ninjabear</p>
+                            <p class="faded">Bear Not Grylls</p>
+                        </div>
+                    </div>
+                    <div class="trending-content">
+                        <img src="./assets/trending-icon-2.svg" alt="profile picture" style="width: 48px; height: 48px;">
+                        <div>
+                            <p>@saymyname</p>
+                            <p class="faded">Breaking Bread</p>
+                        </div>
+                    </div>
+                    <div class="trending-content">
+                        <img src="./assets/trending-icon-3.svg" alt="profile picture" style="width: 48px; height: 48px;">
+                        <div>
+                            <p>@beetlejuice</p>
+                            <p class="faded">Hardest Shell Co.</p>
+                        </div>
+                    </div>
+                    <div class="trending-content">
+                        <img src="./assets/trending-icon-4.svg" alt="profile picture" style="width: 48px; height: 48px;">
+                        <div>
+                            <p>@goodboy</p>
+                            <p class="faded">Woof Woof</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
