Fixed some (subjectively) eeh stuff.

--- a/index.html
+++ b/index.html
@@ -15,44 +15,68 @@
             </div>
             <ul class="dashboard-buttons">
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/home.svg" alt="home icon">
-                    <p>Home</p>
+                    <button>
+                        <img src="./assets/home.svg" alt="home icon">
+                        <p>Home</p>
+                    </button>
                 </li>
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/profile.svg" alt="profile icon">
-                    <p>Profile</p>
+                    <button>
+                        <img src="./assets/profile.svg" alt="profile icon">
+                        <p>Profile</p>
+                    </button>
                 </li>
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/messages.svg" alt="messsages icon">
-                    <p>Messages</p>
+                    <button>
+                        <img src="./assets/messages.svg" alt="messsages icon">
+                        <p>Messages</p>
+                    </button>
                 </li>
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/history.svg" alt="history icon">
-                    <p>History</p>
+                    <button>
+                        <img src="./assets/history.svg" alt="history icon">
+                        <p>History</p>
+                    </button>
                 </li>
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/tasks.svg" alt="tasks icon">
-                    <p>Tasks</p>
+                    <button>
+                        <img src="./assets/tasks.svg" alt="tasks icon">
+                        <p>Tasks</p>
+                    </button>
                 </li>
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/communities.svg" alt="communities icon">
-                    <p>Communities</p>
+                    <button>
+                        <img src="./assets/communities.svg" alt="communities icon">
+                        <p>Communities</p>
+                    </button>
                 </li>
             </ul>
             <ul class="dashboard-buttons">
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/settings.svg" alt="settings icon">
-                    <p>Settings</p>
+                    <button>
+                        <img src="./assets/settings.svg" alt="settings icon">
+                        <p>Settings</p>
+                    </button>
                 </li>
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/support.svg" alt="support icon">
-                    <p>Support</p>
+                    <button>
+                        <img src="./assets/support.svg" alt="support icon">
+                        <p>Support</p>
+                    </button>
                 </li>
                 <li class="dashboard-item pretty-big">
-                    <img src="./assets/privacy.svg" alt="privacy icon">
-                    <p>Privacy</p>
+                    <button>
+                        <img src="./assets/privacy.svg" alt="privacy icon">
+                        <p>Privacy</p>
+                    </button>
                 </li>
             </ul>
+            <div class="github-link">
+                <svg width="24" height="24" viewBox="0 0 1024 1024" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z" transform="scale(64)" fill="#1B1F23"/>
+                </svg>
+                <a href="https://github.com/zemrwantstolearncoding"><button>@zemrwantstolearncoding</button></a>
+            </div>
         </div>
 
         <header>
@@ -61,8 +85,8 @@
                 <input type="text" name="search" id="search">
             </form>
             <div class="utility">
-                <img src="./assets/bell-icon.svg" alt="notification icon">
-                <img src="./assets/profile-pic.svg" alt="profile picture" style="width: 48px; height: 48px;">
+                <img class="fake-button" src="./assets/bell-icon.svg" alt="notification icon">
+                <img class="fake-button" src="./assets/profile-pic.svg" alt="profile picture" style="width: 48px; height: 48px;">
                 <p class="kinda-big">'Arry Pottah</p>
             </div>
             <div class="user-info">
@@ -89,9 +113,9 @@
                             <p class="faded">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, eaque? Excepturi laborum. Quaerat nihil blanditiis quod, repudiandae illo quae iusto sint!</p>
                         </div>
                         <div class="project-actions">
-                            <img src="assets/like-icon.svg" alt="like icon">
-                            <img src="assets/chat-icon.svg" alt="chat icon">
-                            <img src="assets/share-icon.svg" alt="share icon">
+                            <button><img src="assets/like-icon.svg" alt="like icon"></button>
+                            <button><img src="assets/chat-icon.svg" alt="chat icon"></button>
+                            <button><img src="assets/share-icon.svg" alt="share icon"></button>
                         </div>
                     </div>
                     <div class="project-card rounded-border">
@@ -100,9 +124,9 @@
                             <p class="faded">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit minus sunt soluta natus delectus eligendi, ad maiores accusantium cumque rerum maxime blanditiis saepe.</p>
                         </div>
                         <div class="project-actions">
-                            <img src="assets/like-icon.svg" alt="like icon">
-                            <img src="assets/chat-icon.svg" alt="chat icon">
-                            <img src="assets/share-icon.svg" alt="share icon">
+                            <button><img src="assets/like-icon.svg" alt="like icon"></button>
+                            <button><img src="assets/chat-icon.svg" alt="chat icon"></button>
+                            <button><img src="assets/share-icon.svg" alt="share icon"></button>
                         </div>
                     </div>
                     <div class="project-card rounded-border">
@@ -111,9 +135,9 @@
                             <p class="faded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum magnam saepe officia in maxime minima dolorem illo ullam sapiente voluptas dignissimos quibusdam?</p>
                         </div>
                         <div class="project-actions">
-                            <img src="assets/like-icon.svg" alt="like icon">
-                            <img src="assets/chat-icon.svg" alt="chat icon">
-                            <img src="assets/share-icon.svg" alt="share icon">
+                            <button><img src="assets/like-icon.svg" alt="like icon"></button>
+                            <button><img src="assets/chat-icon.svg" alt="chat icon"></button>
+                            <button><img src="assets/share-icon.svg" alt="share icon"></button>
                         </div>
                     </div>
                     <div class="project-card rounded-border">
@@ -122,9 +146,9 @@
                             <p class="faded">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia quaerat expedita vitae iusto velit quas hic ad similique aliquid beatae doloribus voluptatum unde tenetur, eveniet pariatur repellendus? Excepturi, velit incidunt?</p>
                         </div>
                         <div class="project-actions">
-                            <img src="assets/like-icon.svg" alt="like icon">
-                            <img src="assets/chat-icon.svg" alt="chat icon">
-                            <img src="assets/share-icon.svg" alt="share icon">
+                            <button><img src="assets/like-icon.svg" alt="like icon"></button>
+                            <button><img src="assets/chat-icon.svg" alt="chat icon"></button>
+                            <button><img src="assets/share-icon.svg" alt="share icon"></button>
                         </div>
                     </div>
                     <div class="project-card rounded-border">
@@ -133,9 +157,9 @@
                             <p class="faded">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus corporis laborum quo id labore.</p>
                         </div>
                         <div class="project-actions">
-                            <img src="assets/like-icon.svg" alt="like icon">
-                            <img src="assets/chat-icon.svg" alt="chat icon">
-                            <img src="assets/share-icon.svg" alt="share icon">
+                            <button><img src="assets/like-icon.svg" alt="like icon"></button>
+                            <button><img src="assets/chat-icon.svg" alt="chat icon"></button>
+                            <button><img src="assets/share-icon.svg" alt="share icon"></button>
                         </div>
                     </div>
                     <div class="project-card rounded-border">
@@ -144,9 +168,9 @@
                             <p class="faded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rerum, totam, quis asperiores eaque doloremque, beatae quasi iste explicabo repudiandae voluptatem?</p>
                         </div>
                         <div class="project-actions">
-                            <img src="assets/like-icon.svg" alt="like icon">
-                            <img src="assets/chat-icon.svg" alt="chat icon">
-                            <img src="assets/share-icon.svg" alt="share icon">
+                            <button><img src="assets/like-icon.svg" alt="like icon"></button>
+                            <button><img src="assets/chat-icon.svg" alt="chat icon"></button>
+                            <button><img src="assets/share-icon.svg" alt="share icon"></button>
                         </div>
                     </div>
                 </div>
